--- a/webview-ui/diagnostics_panel.html
+++ b/webview-ui/diagnostics_panel.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World</title>
+    <title>Minecraft Diagnostics Panel</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/src/diagnostics_panel/index.tsx"></script>
   </body>
 </html>
